--- a/wordpress-namaspace.yaml
+++ b/wordpress-namaspace.yaml
@@ -24,7 +24,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: wordpress-service
-  namespace: peqi
+  namespace: onobrerodrigo
 spec:
   selector:
     app: wordpress-service-onobrerodrigo
@@ -41,7 +41,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: wordpress
-  namespace: peqi
+  namespace: onobrerodrigo
   labels:
     app.kubernetes.io/name: wordpress
     app.kubernetes.io/instance: wordpress
@@ -67,7 +67,7 @@ spec:
       labels:
         app.kubernetes.io/name: wordpress
         app.kubernetes.io/instance: wordpress
-        app.kubernetes.io/version: "latest"
+        app.kubernetes.io/version: "php7.4-fpm"
         app.kubernetes.io/part-of: wordpress
     spec:
       terminationGracePeriodSeconds: 30
@@ -91,22 +91,22 @@ spec:
 
 ---
 
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: wordpress-ingress
-  namespace: onobrerodrigo
-  annotations:
-    kubernetes.io/ingress.class: nginx
-spec:
-  rules:
-  - host: onobrerodrigo.tech
-    http:
-      paths:
-      - pathType: Prefix
-        path: "/"
-        backend:
-          service:
-            name: wordpress-service
-            port:
-              name: http
+#apiVersion: networking.k8s.io/v1
+#kind: Ingress
+#metadata:
+  #name: wordpress-ingress
+  #namespace: onobrerodrigo
+  #annotations:
+    #kubernetes.io/ingress.class: nginx
+#spec:
+  #rules:
+  #- host: onobrerodrigo.tech
+    #http:
+      #paths:
+      #- pathType: Prefix
+        #path: "/"
+        #backend:
+          #service:
+            #name: wordpress-service
+            #port:
+              #name: http
